# synth-data-gen-from-text

./: .dockerignore  .editorconfig  .gitignore  Dockerfile.dev  Makefile  README.md  config.py  pyproject.toml
conf/: feature_referential_adni.xlsx  feature_referential_ppmi.xlsx  feature_referential_ppmi2024.xlsx
scripts/: main_describe_data.py  main_evaluate.py  main_evaluate_agg.py  main_evaluate_fidelity.py  main_evaluate_privacy.py  main_pipeline.py  main_pipeline_mlflow.py  main_pipeline_train_test.py  main_preparing_adni.py  main_preparing_ppmi.py  main_preparing_ppmi2024.py  main_tab_to_tab_sdg.py  main_text_to_tab_sdg.py  main_text_to_tab_sdg_shuffle.py  test_mistral.py
src/: loading.py  logger.py
src/evaluating/: descriptive_statistics.py  evaluate_fidelity.py  evaluate_privacy.py  evaluate_utility.py  metrics_fidelity.py  metrics_privacy.py
src/modelling/: sdv_copula.py  sdv_ctgan.py  sdv_tvae.py
src/parsers/: parser_evaluate.py  pipeline_parser.py  simple_parser.py
src/preparing/ppmi/: preparing.py
src/prompt_engineering/: __init__.py  prompt_llm.py  prompt_text_to_tab.py  utils_prompt.py
src/utils/: utils_df.py  utils_referential.py  utils_run.py  utils_sdv.py  utils_stat.py
src/visualizing/: vis_sdv.py
