[tool]
[tool.poetry]
name = "synth_data_gen_from_text"
version = "0.0.0"
description = "Generation of synthetic tabular data from text using LLMs"
authors = []

[tool.poetry.dependencies]
python = "~3.10"
sdv = "^1.8.0"
s3fs = "^2023.12.2"
openai = "^1.5.0"
requests = "^2.31.0"
langchain = "^0.0.351"
nbformat = "^5.9.2"
mlflow = "2.9.2"
cachetools = "^5.3.3"
kaleido = "0.2.1"
openpyxl = "3.1.2"
copulas = "0.11.0"
mistralai = "^0.4.0"
transformers = "^4.41.2"
tikzplotly = "^0.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
pylint = "~3.0.1"
black = "^23.1.0"
isort = "^5.12.0"
mypy = {version = "^1.2.1"}
coverage = {version = "^7.1.0", extras = ["toml"]}
ipykernel = "^6.23.0"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "--cov --cov-report term"

[tool.coverage.run]
branch = true
source = ["synth_data_gen_from_text"]
omit = ["**/test*.py"]

[tool.black]
line-length = 120
target-versions = ['py310']
exclude = '''
(
  /(
    | \.git          # root of the project
    | notebooks
  )/
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[[tool.poetry.source]]
name = "pypi.org"
url = "https://pypi.org/simple"
priority = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
